modificado as estruturas do site

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>site</title>
+    <title>Bazar Vitória</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -34,14 +34,29 @@
         </article>
     </main>
 
-    <footer class="enderecoetelefone">
-        <h4>Temos o melhor preço e com qualidade garantida.</h4>
-        <p>(21) 98966-1166</p>
-        <p>(21) 3019-9561</p>
-        <p>Endereço: Estrada Marechal Alencastro, 3763 L.A</p>
-    </footer>
-    <footer class="rodape">
-        <p>Criado por <a href="#" target="_blank" class="criador">Ruan Silva</a></p>
+    <footer>
+        <div class="enderecoetelefone">
+            <h4>Temos o melhor preço e com qualidade garantida.</h4>
+        
+            <h3>ENDEREÇO</h3>
+            <p>Estrada Marechal Alencastro nº 3763 L.A, Anchieta</p>
+            <p>Rio de Janeiro - RJ, CEP: 21645-180</p>
+
+            <h3>CONTATOS</h3>
+            <p>Telefone: (21) 98966-1166</p>
+            <p>Telefone: (21) 3019-9561</p>
+
+            <h3>HORÁRIO DE FUNCIONAMENTO</h3>
+            <p>seg-sex: 08h ás 17h <br>
+            Sáb: 08h ás 14h
+            </p>
+
+        </div>
+    
+        <div class="rodapeDoCriador">
+            <p>&copy;2025 Bazar Vitória. Todos os direitos reservados.</p>
+            <p>Desenvolvido por <a href="#" target="_blank" class="criador">Ruan Silva</a></p>
+        </div>
     </footer>
 </body>
 </html>
