Subindo o site e mudando um pouco ele

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ipsa eum magni eligendi sit. Recusandae, fugiat. Est voluptatem dolorum nihil fugiat illum autem distinctio consequuntur excepturi, exercitationem libero animi dolores!</p>
         </article>
     </main>
+
+    <footer class="enderecoetelefone">
+        <h4>Temos o melhor preço e com qualidade garantida.</h4>
+        <p>(21) 98966-1166</p>
+        <p>(21) 3019-9561</p>
+        <p>Endereço: Estrada Marechal Alencastro, 3763 L.A</p>
+    </footer>
     <footer class="rodape">
         <p>Criado por <a href="#" target="_blank" class="criador">Ruan Silva</a></p>
     </footer>
