--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
         <p>Material de construção | Vidraçaria | Drywall</p>
     </header>
     <nav class="menu">
-        <a href="#">Home</a>
+        <a href="index.html">Home</a>
         <a href="#">Noticias</a>
-        <a href="#">Redes sociais</a>
-        <a href="#">Fale conosco</a>
+        <a href="redessocias.html">Redes sociais</a>
+        <a href="enderecoetelefone">Fale conosco</a>
     </nav>
     <main>
         <article class="primeiroArtigo">
             <h2>Transforme sua casa com drywall</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eveniet ut sit ullam sequi quae consequatur voluptate necessitatibus culpa, quidem officiis distinctio adipisci. Consequuntur obcaecati, magnam repudiandae repellendus corporis maiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nam, expedita hic temporibus saepe consectetur magnam obcaecati rerum sit cum, odit placeat quisquam quasi molestias adipisci. Nostrum suscipit temporibus facere.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eveniet ut sit ullam sequi quae consequatur voluptate necessitatibus culpa, quidem officiis distinctio adipisci. Consequuntur obcaecati, magnam repudiandae repellendus corporis maiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nam, expedita hic temporibus saepe consectetur magnam obcaecati rerum sit cum, odit placeat quisquam quasi molestias adipisci. Nostrum suscipit temporibus facere. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore repellendus autem ab rem et praesentium, eum obcaecati cupiditate enim iure, laboriosam sequi facilis velit at. Ab molestias dolor quia alias. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore cupiditate obcaecati minima ullam possimus corporis, quo at, aperiam, repudiandae numquam tempore! Inventore minus sit necessitatibus architecto consequatur consectetur adipisci corrupti? Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore illo labore in provident esse quae aliquid quaerat, numquam ut neque exercitationem libero, alias beatae culpa ad delectus nobis. Id, optio!</p>
         </article>
         <article class="segundoArtigo">
             <h2>Colocamos Vidros</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim quam deleniti dignissimos nesciunt aliquid error, sit necessitatibus, doloremque ducimus sunt exercitationem dolores? Similique optio, libero eligendi quod corrupti repellat doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quisquam voluptas doloribus maiores rerum quasi laboriosam placeat nihil at, modi maxime, tempora harum pariatur delectus! Hic nemo labore nulla nam.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim quam deleniti dignissimos nesciunt aliquid error, sit necessitatibus, doloremque ducimus sunt exercitationem dolores? Similique optio, libero eligendi quod corrupti repellat doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quisquam voluptas doloribus maiores rerum quasi laboriosam placeat nihil at, modi maxime, tempora harum pariatur delectus! Hic nemo labore nulla nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas aspernatur reprehenderit fugiat voluptatem deleniti. Nesciunt laudantium, necessitatibus magnam maiores nihil eos doloribus illum voluptatem ea facilis ex, excepturi ullam nulla? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quae corporis minima reprehenderit ea consequuntur asperiores, quaerat ipsam autem doloribus a quibusdam ullam porro tenetur accusantium laudantium saepe fuga temporibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam vel soluta dolores, iusto ullam minima vero. Ad, accusantium? Blanditiis maxime labore illum quas sapiente maiores quasi debitis odio. Deleniti, in!</p>
 
         </article>
 
         <article class="endereco">
             <h2>Endereço </h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ipsa eum magni eligendi sit. Recusandae, fugiat. Est voluptatem dolorum nihil fugiat illum autem distinctio consequuntur excepturi, exercitationem libero animi dolores!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ipsa eum magni eligendi sit. Recusandae, fugiat. Est voluptatem dolorum nihil fugiat illum autem distinctio consequuntur excepturi, exercitationem libero animi dolores! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti aspernatur neque fugit, odio quod ducimus beatae esse, natus asperiores ipsam debitis quam expedita voluptatibus, officiis excepturi sequi! Sed, dignissimos optio! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet aut delectus molestiae maiores nostrum optio expedita? Eius quisquam quo, tempore vitae, velit, provident exercitationem eveniet explicabo amet ipsum hic excepturi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum totam aliquam non sapiente quidem nobis distinctio libero dolorem cum maiores omnis, sed autem expedita! Hic accusantium et quod asperiores rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quae magni quis optio, soluta exercitationem, rem dicta vel dolorem vero, voluptatem quia repudiandae modi blanditiis cum doloremque voluptatibus in! Odit?</p>
         </article>
     </main>
 
@@ -43,11 +43,11 @@
             <p>Rio de Janeiro - RJ, CEP: 21645-180</p>
 
             <h3>CONTATOS</h3>
-            <p>Telefone: (21) 98966-1166</p>
-            <p>Telefone: (21) 3019-9561</p>
+            <p>(21) 98966-1166<br>
+            (21) 3019-9561</p>
 
             <h3>HORÁRIO DE FUNCIONAMENTO</h3>
-            <p>seg-sex: 08h ás 17h <br>
+            <p>Seg-Sex: 08h ás 17h <br>
             Sáb: 08h ás 14h
             </p>
 
