Mudei algumas coisas simples no site
Coloquei um Banner para Orçamento, porém ainda esta muito longe de terminar esse site

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bazar Vitória</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="estilos/style.css">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -20,6 +21,14 @@
     <a href="enderecoetelefone.html">Fale Conosco</a>
   </nav>
 
+  <section class="banner">
+        <div class="banner-conteudo">
+            <h2>Transforme sua casa com qualidade e economia</h2>
+            <p>Drywall, vidraçaria e material de construção com o melhor preço da região.</p>
+            <a href="#contato" class="botao-banner">Solicite um Orçamento</a>
+        </div>
+    </section>
+
   <main>
     <article class="primeiroArtigo">
       <h2>Transforme seus ambientes com Drywall</h2>
@@ -32,7 +41,8 @@
     </article>
 
     <article class="endereco">
-      <h2>Endereço</h2>
+      <h2>Imagens de projetos</h2>
+      <img src="imagens/banner.png" alt="Imagem do Projeto 1" class="imagem1">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ipsa eum magni eligendi sit. Recusandae, fugiat. Est voluptatem dolorum nihil fugiat illum autem distinctio consequuntur excepturi, exercitationem libero animi dolores!</p>
     </article>
   </main>
