--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
   <main>
     <article class="primeiroArtigo">
-      <h2>Transforme sua casa com Drywall</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eveniet ut sit ullam sequi quae consequatur voluptate necessitatibus culpa, quidem officiis distinctio adipisci. Consequuntur obcaecati, magnam repudiandae repellendus corporis maiores?</p>
+      <h2>Transforme seus ambientes com Drywall</h2>
+      <p>Oferecemos soluções modernas e práticas com Drywall para renovar o visual de qualquer ambiente. Nossa equipe é especializada e pronta para atender sua necessidade com qualidade, agilidade e bom gosto. Entre em contato para um orçamento personalizado.</p>
     </article>
 
     <article class="segundoArtigo">
-      <h2>Colocamos Vidros</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quam deleniti dignissimos nesciunt aliquid error, sit necessitatibus, doloremque ducimus sunt exercitationem dolores? Similique optio, libero eligendi quod corrupti repellat doloremque.</p>
+      <h2>O que fazemos</h2>
+      <p>Trabalhamos com venda de materiais de construção, instalação de Drywall, serviços de vidraçaria e muito mais. Buscamos sempre entregar o melhor serviço para nossos clientes, com atendimento humanizado e materiais de qualidade.</p>
     </article>
 
     <article class="endereco">
@@ -56,7 +56,7 @@
 
     <section class="rodapeDoCriador">
       <p>&copy; 2025 Bazar Vitória. Todos os direitos reservados.</p>
-      <p>Desenvolvido por <a href="#" target="_blank" class="criador">Ruan Silva</a></p>
+      <p>Desenvolvido por <a href="https://www.linkedin.com/in/ruansilva23" target="_blank" class="criador">Ruan Silva</a></p>
     </section>
   </footer>
 
