--- a/index.html
+++ b/index.html
@@ -48,20 +48,27 @@
   </main>
 
   <footer>
+    <h4 class="titulo_do_rodape">Temos o melhor preço e com qualidade garantida.</h4>
     <section class="enderecoetelefone">
-      <h4>Temos o melhor preço e com qualidade garantida.</h4>
+      
 
-      <h3>Endereço</h3>
-      <p>Estrada Marechal Alencastro nº 3763 L.A, Anchieta</p>
-      <p>Rio de Janeiro - RJ, CEP: 21645-180</p>
+      <div>
+        <h3 class="titulos_das_informacoes_rodape">Endereço</h3>
+        <p>Estrada Marechal Alencastro nº 3763 L.A, Anchieta</p>
+        <p>Rio de Janeiro - RJ, CEP: 21645-180</p>
+      </div>
 
-      <h3>Contatos</h3>
-      <p>(21) 98966-1166<br>
-         (21) 3019-9561</p>
+      <div>
+        <h3 class="titulos_das_informacoes_rodape">Horário de Funcionamento</h3>
+        <p>Seg-Sex: 08h às 17h<br>
+           Sáb: 08h às 14h</p>
+      </div>
 
-      <h3>Horário de Funcionamento</h3>
-      <p>Seg-Sex: 08h às 17h<br>
-         Sáb: 08h às 14h</p>
+      <div>
+        <h3 class="titulos_das_informacoes_rodape">Contatos</h3>
+        <p>(21) 98966-1166<br>
+           (21) 3019-9561</p>
+      </div>
     </section>
 
     <section class="rodapeDoCriador">
