--- a/index.html
+++ b/index.html
@@ -47,22 +47,29 @@
     </article>
   </main>
 
-  <footer>
-    <section class="enderecoetelefone">
-      <h4>Temos o melhor preço e com qualidade garantida.</h4>
-
-      <h3>Endereço</h3>
-      <p>Estrada Marechal Alencastro nº 3763 L.A, Anchieta</p>
-      <p>Rio de Janeiro - RJ, CEP: 21645-180</p>
-
-      <h3>Contatos</h3>
-      <p>(21) 98966-1166<br>
-         (21) 3019-9561</p>
-
-      <h3>Horário de Funcionamento</h3>
-      <p>Seg-Sex: 08h às 17h<br>
-         Sáb: 08h às 14h</p>
-    </section>
+  <footer class="rodape">
+    
+      <section class="enderecoetelefone">
+        <h4>Temos o melhor preço e com qualidade garantida.</h4>
+        <div class="div__rodape">
+          <div>
+          <h3>Endereço</h3>
+          <p>Estrada Marechal Alencastro nº 3763 L.A, Anchieta</p>
+          <p>Rio de Janeiro - RJ, CEP: 21645-180</p>
+          </div>
+          <div>
+          <h3>Contatos</h3>
+          <p>(21) 98966-1166<br>
+             (21) 3019-9561</p>
+          </div>
+          <div>
+          <h3>Horário de Funcionamento</h3>
+          <p>Seg-Sex: 08h às 17h<br>
+             Sáb: 08h às 14h</p>
+        </div>
+      </div>
+      </section>
+    
 
     <section class="rodapeDoCriador">
       <p>&copy; 2025 Bazar Vitória. Todos os direitos reservados.</p>
