criando os estilos temporários e resolvendo como será o definitivo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="banner-conteudo">
             <h2 class="banner__titulo">Transforme sua casa com qualidade e economia</h2>
             <p class="banner__texto">Drywall, vidraçaria e material de construção com o melhor preço da região.</p>
-            <a href="#contato" class="banner__botao">Solicite um Orçamento</a>
+            <div class="botao"><a href="#contato" class="banner__botao">Solicite um Orçamento</a></div>
         </div>
     </section>
 
@@ -73,9 +73,9 @@
       </div>
     </section>
 
-    <section class="rodapeDoCriador">
-      <p>&copy; 2025 Bazar Vitória. Todos os direitos reservados.</p>
-      <p>Desenvolvido por <a href="https://www.linkedin.com/in/ruansilva23" target="_blank" class="criador">Ruan Silva</a></p>
+    <section class="rodape__direitos_criador">
+      <p class="rodape__direitos-autorais">&copy; 2025 Bazar Vitória. Todos os direitos reservados.</p>
+      <p class="rodape__direitos-autorais">Desenvolvido por <a href="https://www.linkedin.com/in/ruansilva23" target="_blank" class="criador">Ruan Silva</a></p>
     </section>
   </footer>
 
