update no style

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     </article>
 
     <article class="endereco">
-      <h2>Imagens de projetos</h2>
+      <h2 class="artigo-2__titulo">Imagens de projetos</h2>
       <img src="imagens/banner.png" alt="Imagem do Projeto 1" class="imagem1">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ipsa eum magni eligendi sit. Recusandae, fugiat. Est voluptatem dolorum nihil fugiat illum autem distinctio consequuntur excepturi, exercitationem libero animi dolores!</p>
+      <p class="artigo-2__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ipsa eum magni eligendi sit. Recusandae, fugiat. Est voluptatem dolorum nihil fugiat illum autem distinctio consequuntur excepturi, exercitationem libero animi dolores!</p>
     </article>
   </main>
 
